--- a/Publisher/Subscriber/packages.config
+++ b/Publisher/Subscriber/packages.config
@@ -5,9 +5,12 @@
   <package id="MassTransit" version="4.0.0" targetFramework="net462" />
   <package id="MassTransit.Autofac" version="4.0.0" targetFramework="net462" />
   <package id="MassTransit.RabbitMQ" version="4.0.0" targetFramework="net462" />
+  <package id="MassTransit.SerilogIntegration" version="4.0.0" targetFramework="net462" />
   <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net462" />
   <package id="NewId" version="3.0.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net462" />
   <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net462" />
+  <package id="Serilog" version="2.7.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net462" />
 </packages>
