--- a/Publisher/Publisher/app.config
+++ b/Publisher/Publisher/app.config
@@ -6,6 +6,18 @@
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MassTransit" publicKeyToken="b8e0e9f2f1e657fa" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.5.1633" newVersion="5.1.5.1633" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="GreenPipes" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.2.111" newVersion="2.1.2.111" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
